TDB-3368: * Updated kit version * Fixed Windows path problems * Changed security root directory construction logic to conform to the new strict-validation checks