@@ -99,7 +99,7 @@ public class JavaLocationResolver {
 
   private static List<JDK> findJDKs() {
     try {
-      List<JDK> jdks = findJDKs(new URL("file://" + System.getProperty("user.home") + File.separator + ".m2" + File.separator + "toolchains.xml"));
+      List<JDK> jdks = findJDKs(new File(System.getProperty("user.home") + File.separator + ".m2" + File.separator + "toolchains.xml").toURI().toURL());
       if (jdks.isEmpty()) {
         jdks = findJDKs(new URL("file:///data/jenkins-slave" + File.separator + ".m2" + File.separator + "toolchains.xml"));
       }
